tests/typechecking/valid/moyen_array_unit2.ml
let ar = Array.create 100 () in
ar.(10);
(print_int 42)
