tests/typechecking/invalid/bad_array_print.ml
let a = Array.create 10 true in 
print_int (a.(0)) 
